@startuml

title __HOME's Class Diagram__\n

  namespace com.example.search_eat_pis {
    namespace ui.home {
      class com.example.search_eat_pis.ui.home.HomeFragment {
          + onCreateView()
          + onDestroyView()
      }
    }
  }
  

  namespace com.example.search_eat_pis {
    namespace ui.home {
      class com.example.search_eat_pis.ui.home.HomeViewModel {
          - mText : MutableLiveData<String>
          + HomeViewModel()
          + getText()
      }
    }
  }
  

  com.example.search_eat_pis.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.example.search_eat_pis.ui.home.HomeFragment o-- com.example.search_eat_pis.databinding.FragmentHomeBinding : binding
  com.example.search_eat_pis.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
